Allowing web and publishing tests to run in parallel