@@ -101,6 +101,14 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <configuration>
+                    <forkCount>2</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <!--<systemPropertyVariables>-->
+                    <!--<databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}</databaseSchema>-->
+                    <!--</systemPropertyVariables>-->
+                    <!--<workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>-->
+
                     <includes>
                         <include>**/testrunner/*.java</include>
                     </includes>
